<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Calculator</string>

    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_dot">.</string>

    <string name="operator_add">+</string>
    <string name="operator_delete">⌫</string>
    <string name="operator_division">÷</string>
    <string name="operator_equal">=</string>
    <string name="operator_multiplier">×</string>
    <string name="operator_subtract">−</string>
</resources>
